--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "homepage": "https://RSY6520.github.io/NS-React-Project1",
+  "homepage": "https://RSY6520.github.io/calculator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
